--- a/index.html
+++ b/index.html
@@ -4,28 +4,39 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
         .box {
-            width: 970px;
-            height: 300px;
-            border: 1px solid #000;
-            /*margin: 50px 50px;*/
-            margin: 100px auto;
+            height: 150px;
+            background: red;
+            /*margin: 0 auto;*/
+            text-align: center;
         }
 
+        span {
+            font-size: 50px;
+            line-height: 150px;
+            transition: all 1s;
+        }
 
+        .box:hover span {
+            margin: 0 20px;
+        }
+
+        h2{
+            color: red;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 <div class="box">
-
+    <span>让</span>
+    <span>我</span>
+    <span>装</span>
+    <span>B</span>
+    <span>让</span>
+    <span>你</span>
+    <span>飞</span>
 </div>
-<p>请写你喜欢的</p>
-<h2>你喜欢</h2>
-<h3>dsf</h3>
+<h2>写你喜欢的</h2>
 </body>
 </html>
